--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -4,7 +4,8 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{title}}</title>
+      <title>{{title}}</title>
+      <link rel="shortcut icon" href="/icons/search.svg">
       <link rel="stylesheet" href="/fontawesome-free/css/all.css">
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
       <link rel="stylesheet" href="/stylesheets/bootstrap.css">
