fixing img icon

--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>{{title}}</title>
-      <link rel="shortcut icon" href="/icons/search.svg">
+      <link rel="shortcut icon" href="/images/icons/search.svg">
       <link rel="stylesheet" href="/fontawesome-free/css/all.css">
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
       <link rel="stylesheet" href="/stylesheets/bootstrap.css">
