hidding completed task

--- a/templates/views/completed-schedules.hbs
+++ b/templates/views/completed-schedules.hbs
@@ -9,20 +9,20 @@
         <div class="col-lg-8 col-sm-12">
             {{nodata}}
             {{#data}}
-                <div class="card mb-1">
+                <div class="card mb-1 {{_id}}" id="{{_id}}">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-12">
+                            <div class="col-10">
                                 <h3 class="">{{titles}}</h3>
                                 <p class=""> {{notes}}</p>
                             </div>
-                            <!--div class="col-2"-->
-                                <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Complete</button-->
+                            <div class="col-2">
+                                <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Delete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
-                                <!--div class="form-group">
-                                    <input type="checkbox" class="form-control mt-3" name=`${{_id}}` id=`${{_id}}`>
+                                <div class="form-group">
+                                    <input type="radio" class="form-control mt-3 delete" name=`delete` value="{{_id}}" id=`{{_id}}` title="Delete">
                                 </div>
-                            </div-->
+                            </div>
                         </div>
                     </div>
                 </div>
