dated completed task

--- a/templates/views/completed-schedules.hbs
+++ b/templates/views/completed-schedules.hbs
@@ -20,7 +20,7 @@
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Delete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
                                 <div class="form-group">
-                                    <input type="radio" class="form-control mt-3 delete" name=`delete` value="{{_id}}" id=`{{_id}}` title="Delete">
+                                    <input type="radio" class="form-control mt-3 delete" name="delete" value="{{_id}}" id='{{_id}}' title="Delete">
                                 </div>
                             </div>
                         </div>
