--- a/templates/views/padding-schedules.hbs
+++ b/templates/views/padding-schedules.hbs
@@ -20,7 +20,7 @@
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Complete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
                                 <div class="form-group">
-                                    <input type="checkbox" class="form-control mt-3" name=`${{_id}}` id=`${{_id}}`>
+                                    <input type="checkbox" class="form-control mt-3 update" name='{{_id}}' id='{{_id}}' title="Updates">
                                 </div>
                             </div>
                         </div>
