--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -26,7 +26,7 @@
                             </div>
                             <div class="col-2">
                                 <div class="form-group">
-                                    <input type="radio" class="form-control mt-3 radio" name="titles" value="{{_id}}" id='{{_id}}'>
+                                    <input type="radio" class="form-control mt-3 radio" name="titles" value="{{_id}}" id='{{_id}}' title="upadate">
                                 </div>
                             </div>
                         </div>
