Fixing current date and adding momentjs for working with dates

--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -11,6 +11,11 @@
   color: ghostwhite !important;
   background: ghostwhite !important;
 }
-.radio:hover{
+/*.radio:hover{
   cursor: pointer;
+}*/
+.delete,.padding,.update,.radio:hover{
+  cursor: pointer;
+  background-color: red !important;
+
 }
