--- a/templates/views/completed-schedules.hbs
+++ b/templates/views/completed-schedules.hbs
@@ -15,7 +15,7 @@
                             <div class="col-10">
                                 <h3 class="">{{titles}}</h3>
                                 <p class=""> {{notes}}</p>
-                                <p class="text-muted">{{updated}}</p>
+                                <p class="text-muted">{{prettifyDate updated}}</p>
                             </div>
                             <div class="col-2">
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Delete</button-->
