--- a/templates/views/padding-schedules.hbs
+++ b/templates/views/padding-schedules.hbs
@@ -9,19 +9,19 @@
         <div class="col-lg-8 col-sm-12">
 
             {{#data}}
-                <div class="card mb-1">
+                <div class="card mb-1 {{_id}}" id="{{_id}}">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-10">
                                 <h3 class="">{{titles}}</h3>
                                 <p class=""> {{notes}}</p>
-                                <p class="text-muted">{{created}}</p>
+                                <p class="text-muted">{{prettifyDate created}}</p>
                             </div>
                             <div class="col-2">
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Complete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
                                 <div class="form-group">
-                                    <input type="checkbox" class="form-control mt-3 update" name='{{_id}}' id='{{_id}}' title="Updates">
+                                    <input type="radio" class="form-control mt-3 update radio" name="titles" value='{{_id}}' id='{{_id}}' title="Updates">
                                 </div>
                             </div>
                         </div>
