--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -23,6 +23,7 @@
                             <div class="col-8">
                                 <h3 class="">{{titles}}</h3>
                                     <p class="">{{notes}}</p>
+                                <p class="text-muted">{{prettifyDate created}}</p>
                             </div>
                             <div class="col-2">
                                 <div class="form-group">
