--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,17 +17,20 @@
                     <div class="card-body">
                         {{message}}
                         <div class="row">
-                            <div class="col-2">
-                                <a type="button" class="mt-3"><span class="fa fa-times mt-3"></span> </a>
-                            </div>
-                            <div class="col-8">
+                            <!--div-- class="col-1"-->
+                                <!--a type="button" class="mt-3"><span class="fa fa-times mt-3"></span> </a-->
+                            <!--/div-->
+                            <div class="col-10">
                                 <h3 class="">{{titles}}</h3>
                                     <p class="">{{notes}}</p>
                                 <p class="text-muted">{{prettifyDate created}}</p>
                             </div>
                             <div class="col-2">
                                 <div class="form-group">
-                                    <input type="radio" class="form-control mt-3 radio" name="titles" value="{{_id}}" id='{{_id}}' title="upadate">
+                                    {{#if updated}}
+                                        {{else}}
+                                        <input type="radio" class="form-control mt-3 radio" name="titles" value="{{_id}}" id='{{_id}}' title="upadate">
+                                    {{/if}}
                                 </div>
                             </div>
                         </div>
