--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -16,6 +16,18 @@
 }*/
 .delete,.padding,.update,.radio:hover{
   cursor: pointer;
-  background-color: red !important;
-
+}
+.times{
+  color: red;
+  font-size: 1em;
+  &:hover{
+    color: tomato;
+  }
+}
+.check{
+  color: #1ab7d1;
+  font-size: 1em;
+  &:hover{
+    color: #1ab7d1;
+  }
 }
