changing completed file

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,10 @@ nav {
   .check:hover {
     color: #1ab7d1; }
 
+.form-group input[type=radio][name=titles] {
+  background-color: #00B7FF;
+  border-color: #4c4; }
+
 body {
   padding-top: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
