--- a/templates/views/padding-schedules.hbs
+++ b/templates/views/padding-schedules.hbs
@@ -15,13 +15,14 @@
                             <div class="col-10">
                                 <h3 class="">{{titles}}</h3>
                                 <p class=""> {{notes}}</p>
-                                <p class="text-muted">{{prettifyDate created}}</p>
+                                <p class="text-muted disabled" style="font-size:12px;">{{prettifyDate created}}</p>
                             </div>
                             <div class="col-2">
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Complete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
                                 <div class="form-group">
-                                    <input type="radio" class="form-control mt-3 update radio" name="titles" value='{{_id}}' id='{{_id}}' title="Updates">
+                                    <input type="radio" class="form-control mt-4 update radio" name="titles" value='{{_id}}' id='{{_id}}' title="Updates">
+                                    <span class=""></span>
                                 </div>
                             </div>
                         </div>
