--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row align-items-center justify-content-center">
         <div class="col">
-            <h1 class="d-flex justify-content-center mt-2">{{head}} </h1>
+            <h1 class="d-flex justify-content-center mt-2 text-muted">{{head}} </h1>
             <p class="load d-flex justify-content-center"> Welcome to {{title}} </p>
         </div>
     </div>
