--- a/templates/views/new-schedule.hbs
+++ b/templates/views/new-schedule.hbs
@@ -1,4 +1,4 @@
-<h1 class="d-flex justify-content-center mt-3">{{head}} </h1>
+<h1 class="d-flex justify-content-center mt-3 text-muted">{{head}} </h1>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
@@ -17,6 +17,7 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-light" type="submit">Save <span class="fa fa-save"></span> </button>
+                    <button class="btn btn-reset" type="reset">Clear <span class="fa fa-sync-alt"></span> </button>
                 </div>
             </form>
         </div>
