--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,7 +15,6 @@
             {{#data}}
                 <div class="card mb-1 {{_id}}" id="{{_id}}">
                     <div class="card-body">
-                        {{message}}
                         <div class="row">
                             <!--div-- class="col-1"-->
                                 <!--a type="button" class="mt-3"><span class="fa fa-times mt-3"></span> </a-->
@@ -40,6 +39,16 @@
                     </div>
                 </div>
             {{/data}}
+
+            {{#unless data}}
+            <div class="card mb-1 mt-3 bg-warning">
+                <div class="card-body">
+                    <div class="row">
+                        <h4 class="text-white">No Task has been found</h4>
+                    </div>
+                </div>
+            </div>
+            {{/unless}}
 
         </div>
     </div>
