adding media query & toggle_aside

--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -20,11 +20,11 @@
     color: white;
   }
 }
-.navbar-toggler{
+/*.navbar-toggler{
   border-radius: 6px;
   color: ghostwhite !important;
   background: ghostwhite !important;
-}
+}*/
 /*.radio:hover{
   cursor: pointer;
 }*/
