--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -2,6 +2,8 @@
 @import "components/main"
 @import "components/header"
 @import "components/buttons"
+@import "components/media"
+@import "components/aside_panel"
 
 body
   padding-top: 50px
