--- a/templates/views/completed-schedules.hbs
+++ b/templates/views/completed-schedules.hbs
@@ -1,10 +1,10 @@
-<div class="container">
-    <div class="row align-items-center justify-content-center">
-        <div class="col">
+<!--div class="container">
+    <div-- class="row align-items-center justify-content-center">
+        <div class="col"-->
             <h1 class="d-flex justify-content-center mt-3 text-muted">{{head}} </h1>
-            <!--p class="load d-flex justify-content-center"> Welcome to {{title}} </p-->
+            <!--p class="load d-flex justify-content-center"> Welcome to {{title}} </p>
         </div>
-    </div>
+    </div-->
     <div class="row">
         <div class="col-lg-8 col-sm-12">
             {{#data}}
@@ -29,7 +29,7 @@
             {{/data}}
 
             {{#unless data}}
-                <div class="card mb-1 bg-warning mt-3">
+                <div class="card mb-1 bg-info mt-3">
                     <div class="card-body">
                         <div class="row">
                             <h4 class="text-white">No Completed Task has been found</h4>
@@ -39,4 +39,4 @@
             {{/unless}}
         </div>
     </div>
-</div>
+<!--/div-->
