--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light text-light fixed-top">
     <a class="navbar-brand text-light" href="/">Schedule App</a>
+    <a href="#" class="app-sidebar_toggle" data-toggle="sidebar" aria-label="Hide Sidebar">
+        <span class="fa fa-bars"></span>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
