--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -13,17 +13,26 @@
       <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"-->
 
   </head>
-  <body>
+  <body class="app">
   <!-- Preloader -->
   <div class="preloader"></div>
       {{>header}}
-        {{{body}}}
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2 app-aside">
+                    <p class="lead">ttt <span class="fa fa-chevron-right ml-3"></span> </p>
+                </div>
+                    <div class="col">
+                        {{{body}}}
+                    </div>
+            </div>
+        </div>
   </body>
 <script src="/javascripts/jquery.js"></script>
 <script src="/javascripts/preload.js"></script>
 <script src="/javascripts/bootstrap.js"></script>
 <script src="/javascripts/complete.js"></script>
-
+  <script src="/javascripts/costume.js"></script>
 
   <!--script src="https://code.jquery.com/jquery-1.12.4.js"></script-->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
