adding ajax auto-reload

--- a/public/stylesheets/components/_aside_panel.scss
+++ b/public/stylesheets/components/_aside_panel.scss
@@ -6,10 +6,18 @@
   position: fixed;
   overflow: auto;
   z-index: 10;
-  background: lighten(#0c5460, 50%);
+  background: lighten(#0c5460, 25%);
   box-shadow: 0px 8px 17px rgba(0,0,0,.2);
   transition: left 0.3s ease,
   width 0.3s ease;
+}
+.app-aside.aside_minimise{
+  width: 53px !important;
+  transition: left 0.4s ease,
+  width 0.4s ease;
+}
+.aside_span .lead_info.aside_lead_hide{
+  display: none;
 }
 .app-sidebar_toggle{
   color: #fff;
@@ -20,15 +28,19 @@
     text-decoration: none;
   }
 }
+.aside_span{
+  margin-top:5px;
+  margin-bottom: 5px;
+}
 @media (max-width:480px) {
   .app-aside{
-    left: -230px;
+    left: -530px;
     transition: all 0.3s ease,
     width 0.3s ease;
   }
   .app.app-slidebar-toggled .app-aside{
-    margin-left: 230px;
-    width: 530px;
+    margin-left: 530px;
+    width: 180px;
     transition: all 0.3s ease,
     width 0.3s ease;
   }
