--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -1,3 +1,6 @@
+.change{
+  color: darken(white,25%);
+}
 .btn-light{
   background: lighten(orange,15%) !important;
   border-radius: 12px 0 12px 0;
