--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -19,9 +19,65 @@
       {{>header}}
         <div class="container-fluid">
             <div class="row">
-                <div class="col-2 app-aside">
-                    <p class="lead">ttt <span class="fa fa-chevron-right ml-3"></span> </p>
-                </div>
+                <div class="col-md-2 col-sm-2 col-xs-2 app-aside">
+                    <div class="row">
+                        <div class="col p-2">
+                            <a role="button" class="aside_minimise"><span class="fa fa-step-backward float-right fa-1x"></span></a>
+                        </div>
+                    </div>
+                        <!--div-- class="row mt-2">
+                            <div class="col aside_span">
+                                <p><span class="fa fa-house-user fa-2x change"></span>
+                                    <span class="lead lead_info justify-content-center align-items-center">House P  </span>
+                                </p>
+                                <p><span class="fa fa-shoe-prints fa-2x change"></span>
+                                    <span class="lead lead_info align-content-center">Shoe Print  </span>
+                                </p>
+                                <p><span class="fa fa-dumbbell fa-2x change"></span>
+                                    <span class="lead lead_info ">Dumbbel  </span>
+                                </p>
+                            </div>
+                        </div-->
+
+                    <div class="row aside_span">
+                        <div class="col-12 bg-success">
+                            <div class="row">
+                                <div class="col-2">
+                                    <span class="fa fa-house-user"></span>
+                                </div>
+                                <div class="col-10">
+                                    <p class="lead_info">PPPPPPP</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row aside_span bg-light">
+                        <div class="col-2">
+                            <span class="fa fa-shoe-prints"></span>
+                        </div>
+                        <div class="col">
+                            <p class="lead_info">Ronewa</p>
+                        </div>
+                    </div>
+
+                    <div class="row aside_span">
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-2">
+                                    <!--img src="..." class="card-img" alt="..."-->
+                                    <span class="fa fa-shoe-prints"></span>
+                                </div>
+                                <div class="col lead_info">
+                                    <div class="">
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div><!-- END OF ASIDE-PANEL-->
                     <div class="col">
                         {{{body}}}
                     </div>
